[gd_scene load_steps=7 format=3 uid="uid://c41cmawmby0hw"]

[ext_resource type="Script" path="res://ui/tutorial_pop_up/tutorial_pop_up.gd" id="1_c4g50"]
[ext_resource type="Texture2D" uid="uid://d3mqegq4h314m" path="res://ui/tutorial_pop_up/Next Icon.png" id="2_o7ieq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8l45h"]
bg_color = Color(0.219608, 0.254902, 0.313726, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0901961, 0.0666667, 0.101961, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 3
anti_aliasing = false

[sub_resource type="Animation" id="Animation_bmo7g"]
resource_name = "Pulse"
length = 2.0
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NextIcon:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(2.2974, 0.329877, 0.366021),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_yulss"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NextIcon:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gkyuu"]
_data = {
"Pulse": SubResource("Animation_bmo7g"),
"RESET": SubResource("Animation_yulss")
}

[node name="TutorialPopUp" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 320.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_c4g50")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(300, 30)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -58.0
offset_right = 150.0
grow_horizontal = 2
grow_vertical = 0

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8l45h")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="TutorialLabel" type="Label" parent="MarginContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.960784, 0.937255, 0.909804, 1)
theme_override_constants/line_spacing = -3
text = "This is a test to see what happens is I keep typing to see if this keeps expanding.
More testing to see what happens if I just keep on typing and typing"
autowrap_mode = 2

[node name="IconMarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="NextIcon" type="TextureRect" parent="MarginContainer/IconMarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
texture = ExtResource("2_o7ieq")
stretch_mode = 2

[node name="SkipAnimationPlayer" type="AnimationPlayer" parent="MarginContainer/IconMarginContainer"]
libraries = {
"": SubResource("AnimationLibrary_gkyuu")
}
